--- a/KYGooeyMenu/KYGooeyMenu/Base.lproj/Main.storyboard
+++ b/KYGooeyMenu/KYGooeyMenu/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +16,42 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="4" minValue="2" maxValue="6" translatesAutoresizingMaskIntoConstraints="NO" id="Hy4-qj-VZ1">
+                                <rect key="frame" x="198" y="285" width="204" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Vko-jM-xV9"/>
+                                    <constraint firstAttribute="height" constant="30" id="ejx-HQ-NQ3"/>
+                                </constraints>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4CR-nR-7tj">
+                                <rect key="frame" x="174" y="289" width="10" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYA-qA-6Zk">
+                                <rect key="frame" x="416" y="289" width="10" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="Hy4-qj-VZ1" secondAttribute="centerY" id="5c8-tp-ooL"/>
+                            <constraint firstAttribute="centerY" secondItem="4CR-nR-7tj" secondAttribute="centerY" id="Sw6-2l-nCq"/>
+                            <constraint firstAttribute="centerY" secondItem="xYA-qA-6Zk" secondAttribute="centerY" id="Vra-qu-Y0P"/>
+                            <constraint firstAttribute="centerX" secondItem="Hy4-qj-VZ1" secondAttribute="centerX" id="el6-FY-g3a"/>
+                            <constraint firstItem="xYA-qA-6Zk" firstAttribute="leading" secondItem="Hy4-qj-VZ1" secondAttribute="trailing" constant="16" id="okg-0e-uMf"/>
+                            <constraint firstItem="Hy4-qj-VZ1" firstAttribute="leading" secondItem="4CR-nR-7tj" secondAttribute="trailing" constant="16" id="s7z-TQ-bcd"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="current" destination="xYA-qA-6Zk" id="STi-X9-CuY"/>
+                        <outlet property="min" destination="4CR-nR-7tj" id="onk-H7-I48"/>
+                        <outlet property="slider" destination="Hy4-qj-VZ1" id="71n-f9-DAM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
