--- a/KYGooeyMenu/KYGooeyMenu/Base.lproj/Main.storyboard
+++ b/KYGooeyMenu/KYGooeyMenu/Base.lproj/Main.storyboard
@@ -37,16 +37,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="GPd-cJ-aX7">
-                                <rect key="frame" x="276" y="335" width="51" height="31"/>
+                                <rect key="frame" x="276" y="539" width="51" height="31"/>
                             </switch>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="Hy4-qj-VZ1" secondAttribute="centerY" id="5c8-tp-ooL"/>
                             <constraint firstAttribute="centerX" secondItem="GPd-cJ-aX7" secondAttribute="centerX" id="Jw3-Ao-dUy"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="GPd-cJ-aX7" secondAttribute="bottom" constant="30" id="MKX-7e-nEc"/>
                             <constraint firstAttribute="centerY" secondItem="4CR-nR-7tj" secondAttribute="centerY" id="Sw6-2l-nCq"/>
                             <constraint firstAttribute="centerY" secondItem="xYA-qA-6Zk" secondAttribute="centerY" id="Vra-qu-Y0P"/>
-                            <constraint firstItem="GPd-cJ-aX7" firstAttribute="top" secondItem="Hy4-qj-VZ1" secondAttribute="bottom" constant="20" id="aWb-Oe-DG1"/>
                             <constraint firstAttribute="centerX" secondItem="Hy4-qj-VZ1" secondAttribute="centerX" id="el6-FY-g3a"/>
                             <constraint firstItem="xYA-qA-6Zk" firstAttribute="leading" secondItem="Hy4-qj-VZ1" secondAttribute="trailing" constant="16" id="okg-0e-uMf"/>
                             <constraint firstItem="Hy4-qj-VZ1" firstAttribute="leading" secondItem="4CR-nR-7tj" secondAttribute="trailing" constant="16" id="s7z-TQ-bcd"/>
